fix(ui/controls): lower controls not interactable on mobile

--- a/packages/core/src/components/ui/settings/settings/settings.scss
+++ b/packages/core/src/components/ui/settings/settings/settings.scss
@@ -11,7 +11,6 @@
 vime-settings {
   position: absolute;
   opacity: 0;
-  visibility: hidden;
   pointer-events: auto;
   overflow-x: hidden;
   overflow-y: auto;
@@ -25,6 +24,10 @@ vime-settings {
   scrollbar-width: thin;
   scroll-behavior: smooth;
   scrollbar-color: var(--vm-settings-scroll-thumb-color) var(--vm-settings-scroll-track-color);
+
+  &.hydrated {
+    visibility: hidden !important;
+  }
 
   &::-webkit-scrollbar {
     width: var(--vm-settings-scroll-width);
@@ -42,7 +45,7 @@ vime-settings {
 
   &.active {
     opacity: 1;
-    visibility: visible;
+    visibility: visible !important;
   }
 
   &.mobile {
